[package]
name = "rsubs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Dracea, adracea@gmail.com"]
description = "Pure Rust subtitle manipulation software."
readme = "README.md"
repository = "https://github.com/adracea/rsubs"
license = "MIT"
keywords = ["subtitle", "subs", "converter"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

regex = "1.6"
once_cell = "1.16.0"

rsubs-lib = {path="./rsubs-lib"}