[package]
name = "rsubs"
version = "0.1.0"
edition = "2021"
authors = ["Alex Dracea, adracea@gmail.com"]
description = "Pure Rust subtitle manipulation software."
readme = "README.md"
repository = "https://github.com/adracea/rsubs"
license = "MIT"
keywords = ["subtitle", "subs", "converter"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


rsubs-lib = "0.1"
eframe = { version="0.21", features = [
    "__screenshot", # __screenshot is so we can dump a screenshot using EFRAME_SCREENSHOT_TO
] }
rfd = "0.11"
tracing-subscriber = "0.3"